# lossystyles

./: .gitignore  README.md
cli/: go.mod
cli/cmd/lossystyles/: main.go
cli/internal/dashboard/: bio.go  eva.go  model.go  pcr.go
cli/internal/protocol/: protocol.go
cli/internal/renderers/: bio.go  canvas.go  chart.go  eva.go  polytope.go  sparkline.go  table.go
cli/internal/server/: server.go
cli/internal/themes/: themes.go
examples/: basic.py
protocol/: PROTOCOL.md
sdk/: pyproject.toml
sdk/src/lossystyles/: __init__.py  client.py  config.py  run.py
sdk/src/lossystyles/integrations/: callback_pytorch.py
