[project]
name = "lossystyles"
version = "0.1.0"
description = "Rich CLI visualizations for ML training — wandb for your terminal"
requires-python = ">=3.10"
dependencies = []
license = "MIT"

[project.optional-dependencies]
pytorch = ["torch"]
keras = ["keras"]
hf = ["transformers"]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lossystyles"]

[tool.ruff]
line-length = 99

[tool.mypy]
strict = true
